Bug 1708285 - Pass default font settings from parent to child processes. r=jfkthame

Instead of relying on GTK to be initialized in the child process.

Differential Revision: https://phabricator.services.mozilla.com/D113784