gfx/thebes/gfxPlatform.h
@@ -64,6 +64,7 @@ inline uint32_t BackendTypeBit(BackendType b) { return 1 << uint8_t(b); }
 }  // namespace gfx
 namespace dom {
 class SystemFontListEntry;
+class SystemFontList;
 }
 }  // namespace mozilla
 
@@ -362,8 +363,7 @@ class gfxPlatform : public mozilla::layers::MemoryPressureListener {
    * available fonts on the platform; used to pass the list from chrome to
    * content process. Currently implemented only on MacOSX and Linux.
    */
-  virtual void ReadSystemFontList(
-      nsTArray<mozilla::dom::SystemFontListEntry>* aFontList) {}
+  virtual void ReadSystemFontList(mozilla::dom::SystemFontList*){};
 
   /**
    * Rebuilds the system font lists (if aFullRebuild is true), or just notifies
